correct styles files link

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ведьмак - фан сайт сериала</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <
 </head>
 
 <body>
@@ -33,12 +35,66 @@
     </header>
 
     <main>
+        <div class="container">
+
+            <div class="main-content">
+                <div class="content">
+                    <span class="genre">
+                        2019, фентези
+                    </span>
+                    <div class="rating">
+                        <div class="rating-stars">
+                            <img src="img/star.svg" alt="star">
+                            <img src="img/star.svg" alt="star">
+                            <img src="img/star.svg" alt="star">
+                            <img src="img/star.svg" alt="star">
+                            <img src="img/star.svg" alt="star">
+                            <img src="img/star.svg" alt="star">
+                            <img src="img/star.svg" alt="star">
+                            <img src="img/star-o.svg" alt="star-0">
+                            <img src="img/star-o.svg" alt="star-0">
+                            <img src="img/star-o.svg" alt="star-0">
+                        </div>
+                        <div class="rating-number">
+                            7/10
+                        </div>
+                    </div>
+
+                    <h1 class="main-title">Ведьмак</h1>
+
+                    <div class="description-container">
+                        <p class="main-description">Геральт – бесстрашный искатель приключений, который за небольшую горку чеканных монет готов рискнуть своей жизнью и сразиться с очередным монстром или диким зверем. Он принадлежит к клану ведьмаков – мутировавших людей, обладающих
+                            звериной реакцией, позволяющим распознавать зло чутьем, повышенной силой и способностью к некоторым заклинаниям.</p>
+                    </div>
+
+                    <button class="action-button">
+                        Смотреть онлайн                
+                    </button>
+
+                </div>
+
+                <button class="play">
+                    <img src="img/play.svg" alt="play button" class="play-img">
+                </button>
+            </div>
+
+
+        </div>
 
 
     </main>
 </body>
-<footer>
-
+<footer class="footer">
+    <div class="footer-column">
+        <p>2020 Acme. All rights reserved</p>
+    </div>
+    <div class="footer-column">
+        <ul class="footer-menu">
+            <li class="footer-menu-item">Terms of Service</li>
+            <li class="footer-menu-item">Privacy Policy </li>
+            <li class="footer-menu-item">Legal</li>
+        </ul>
+    </div>
 </footer>
 
 </html>
